tests/ui/stability-attribute/stable-in-unstable.stderr
error[E0658]: use of unstable library feature `unstable_test_feature`
  --> $DIR/stable-in-unstable.rs:16:9
   |
LL |     use stable_in_unstable_core::new_unstable_module;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #1 <https://github.com/rust-lang/rust/issues/1> for more information
   = help: add `#![feature(unstable_test_feature)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `unstable_test_feature`
  --> $DIR/stable-in-unstable.rs:17:9
   |
LL |     use stable_in_unstable_core::new_unstable_module::OldTrait;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #1 <https://github.com/rust-lang/rust/issues/1> for more information
   = help: add `#![feature(unstable_test_feature)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `unstable_test_feature`
  --> $DIR/stable-in-unstable.rs:29:9
   |
LL |     use stable_in_unstable_core::new_unstable_module::OldTrait;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #1 <https://github.com/rust-lang/rust/issues/1> for more information
   = help: add `#![feature(unstable_test_feature)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `unstable_test_feature`
  --> $DIR/stable-in-unstable.rs:39:10
   |
LL |     impl stable_in_unstable_core::new_unstable_module::OldTrait for LocalType {}
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #1 <https://github.com/rust-lang/rust/issues/1> for more information
   = help: add `#![feature(unstable_test_feature)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `unstable_test_feature`
  --> $DIR/stable-in-unstable.rs:49:56
   |
LL |     use stable_in_unstable_core::new_unstable_module::{OldTrait};
   |                                                        ^^^^^^^^
   |
   = note: see issue #1 <https://github.com/rust-lang/rust/issues/1> for more information
   = help: add `#![feature(unstable_test_feature)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `unstable_test_feature`
  --> $DIR/stable-in-unstable.rs:53:9
   |
LL |     use stable_in_unstable_core::new_unstable_module::*;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #1 <https://github.com/rust-lang/rust/issues/1> for more information
   = help: add `#![feature(unstable_test_feature)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0658`.
